Setting up spades assemblies of L. uwisara

--- a/1301-uwisara.Rmd
+++ b/1301-uwisara.Rmd
@@ -228,3 +228,25 @@ ggplot(covs) +
   theme(plot.title = element_text(hjust=0.5, face="bold"))
 
 ```
+
+
+## uwisara mtDNA
+
+Lets make assemblies of these fishes.
+
+module load spades
+srun -p bigmemm -t 24:00:00 --mem=240GB --nodes=1 --cpus-per-task=6 spades.py --phred-offset 33 -1 data/bangladesh/split/SRR26358744_pass_1.fastq.gz  -2 data/bangladesh/split/SRR26358744_pass_2.fastq.gz -o data/denovo/SRR26358744 
+
+No spades module, creating conda environment spades
+mamba install spades
+is spades.py
+
+Create commands:
+
+```{r}
+#trialing indonesian sample
+ind %>% filter(Lineage=="uwisara") %>% mutate(Command=paste0("srun -p bigmemm -t 72:00:00 --mem=520GB --nodes=1 --cpus-per-task=6 spades.py --phred-offset 33 -1 data/uwisara/",Run,"-R1.fastq.gz -2 data/uwisara/",Run,"-R2.fastq.gz -o data/denovo/",Run," > data/denovo/",Run,".out 2> data/denovo/",Run,".err &")) %>% select(Command) %>%
+  write_tsv("1301.2-spades.txt")
+```
+
+
